<resources>
    <string name="app_name">Photo Editor</string>

    <string name="file_provider_authority" translatable="false">com.workfort.photoeditor.fileprovider</string>

    <string name="title_activity_editor">Edit</string>

    <string name="description_image">Image</string>
    <string name="pic_image">Pic Image</string>
    <string name="label_save">Save</string>
    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_emji">Emoji</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_undo">Undo</string>
    <string name="label_redo">Redo</string>
    <string name="label_crop">Crop</string>
    <string name="title_activity_crop_image">Crop</string>
    <string name="label_filters">Filters</string>
    <string name="label_close">Close</string>
</resources>
